WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308664
AX: Fix iframe aria-hidden propagation with ENABLE(ACCESSIBILITY_LOCAL_FRAME)
https://bugs.webkit.org/show_bug.cgi?id=308664
Summary
AX: Fix iframe aria-hidden propagation with ENABLE(ACCESSIBILITY_LOCAL_FRAME)
Tyler Wilcock
Reported
2026-02-25 13:16:22 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-25 13:16:28 PST
<
rdar://problem/171197467
>
Tyler Wilcock
Comment 2
2026-02-25 13:18:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59445
EWS
Comment 3
2026-02-26 22:26:33 PST
Committed
308323@main
(97f8688d9dc6): <
https://commits.webkit.org/308323@main
> Reviewed commits have been landed. Closing PR #59445 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug