AX: Fix iframe aria-hidden propagation with ENABLE(ACCESSIBILITY_LOCAL_FRAME) https://bugs.webkit.org/show_bug.cgi?id=308664 rdar://171197467

Reviewed by Joshua Hoffman.

When aria-hidden changes from "true" to "false" on an iframe, the
AXLocalFrame transitions from ignored to unignored and calls
childrenChanged on its parent FrameHost ScrollView. However,
handleChildrenChanged hits an early return for objects with no node
and no renderer, so the ancestor chain walk never runs and the
isolated tree is never updated.

Fix this by propagating childrenChanged from the FrameHost ScrollView
up to its parent iframe element, which has both a node and a renderer
and can drive the ancestor chain walk correctly.

Fixes accessibility/mac/iframe-aria-hidden.html with ENABLE(ACCESSIBILITY_LOCAL_FRAME).

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleChildrenChanged):
* Source/WebCore/accessibility/AccessibilityScrollView.h:

Canonical link: https://commits.webkit.org/308323@main