Source/WebCore/accessibility/AccessibilityScrollView.h
@@ -53,6 +53,7 @@ public:
     String ownerDebugDescription() const;
     String extraDebugInfo() const final;
 
+    AccessibilityObject* parentObject() const final;
 #if ENABLE(ACCESSIBILITY_LOCAL_FRAME)
     AccessibilityObject* crossFrameParentObject() const final;
     AccessibilityObject* crossFrameChildObject() const final;
@@ -104,7 +105,6 @@ private:
     LocalFrameView* documentFrameView() const final;
     LayoutRect elementRect() const final;
     LayoutRect boundingBoxRect() const final { return elementRect(); }
-    AccessibilityObject* parentObject() const final;
     AccessibilityObject* horizontalScrollbar() const { return m_horizontalScrollbar.get(); }
     AccessibilityObject* verticalScrollbar() const { return m_verticalScrollbar.get(); }
     HTMLFrameOwnerElement* frameOwnerElement() const { return m_frameOwnerElement; }
